@@ -30,6 +30,7 @@ Bugs fixed:
 (#672) Fix Evenstar activation message.
 (#673) Fix description of Identify scrolls.
 (#676) Fixed character creation help.
+(#680) Stop displaying two highscore entries for dead characters.
 (#683) Fix !Berserk Strength being unsellable.
 (#685) Scrolls of Create Trap now ID on use.
 (#688) Mages once more get a message when they can't learn new spells from a book.
